--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "mocha": "^9.0.1",
     "redux": "^4.1.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "uid": "^2.0.0"
   }
 }
